# deskhop

./: CMakeLists.txt  README.md
docs/: DESIGN.md  IMPLEMENTATION.md  PATH_P_DESIGN.md
docs/captures/: trackpad-activate-stall.txt  trackpad-mount-and-baseline.txt  trackpad-multitouch-frames.txt
misc/: 99-deskhop-trackpad.rules  deskhop-trackpad-rebind.sh
src/: defaults.c  handlers.c  keyboard.c  magic_trackpad.c  magic_trackpad_gestures.c  magic_trackpad_tap.c  main.c  passthrough_uart.c  protocol.c  ptp_descriptor.c  setup.c  tasks.c  uart.c  usb.c  usb_descriptors.c
src/include/: constants.h  handlers.h  hid_parser.h  keyboard.h  magic_trackpad.h  magic_trackpad_gestures.h  magic_trackpad_tap.h  mouse.h  passthrough.h  passthrough_uart.h  protocol.h  ptp_descriptor.h  screen.h  structs.h  tasks.h  tusb_config.h
tools/ptp_capture/: capture.sh  cdctest.sh  diag.sh  hidrawtest.sh  libinputtest.sh  touchtest.sh
webconfig/: config-unpacked.htm  config.htm  form.py
